# always-attend

./: .env.example  .gitignore  AGENTS.md  Always-Attend.bat  Always-Attend.command  Always-Attend.ps1  README.md  README_zh.md  attendance_stats.json  env_utils.py  launch.py  logger.py  logging_config.py  login.py  main.py  pyproject.toml  requirements.txt  sample_codes.json  submit.py
.github/ISSUE_TEMPLATE/: attendance-codes.yml
.github/workflows/: attendance-from-issues.yml  ci.yml  cleanup-attendance-data.yml  docker-build.yml  release.yml
config/: i18n.json
data/FIT1043/: 10.json  11.json  12.json  4.json  5.json  6.json  7.json  8.json  9.json
data/FIT1045/: 10.json  11.json  12.json  4.json  5.json  6.json  7.json  8.json  9.json
data/FIT1047/: 10.json  11.json  12.json  4.json  5.json  6.json  7.json  8.json  9.json
data/FIT1055/: 1.json
data/FIT1058/: 10.json  11.json  12.json  4.json  5.json  6.json  7.json  8.json  9.json
data/FIT1111/: WK3.json
data/FIT2099/: 1.json
scripts/: preview_flow.py
skills/: SKILL.md
skills/attend-agent-workflow/: SKILL.md
src/: __init__.py
src/always_attend/: __init__.py  __main__.py  agent_cli.py  agent_protocol.py  ai_handoff.py  argv.py  attendance_state_reader.py  cli.py  code_parser.py  matcher.py  okta_client.py  paths.py  reporter.py  runtime_contract.py  session_manager.py  skill_installer.py  source_clients.py  submission_plan.py  submitter.py
src/always_attend/skills/: BOOTSTRAP.md  SKILL.md
src/always_attend/skills/attend-agent-workflow/: SKILL.md
src/always_attend/source_collectors/: __init__.py  base.py  edstem.py  gmail.py  gog.py  moodle.py  ocr.py
src/always_attend_mvp/: codes.py  navigator.py  runner.py
src/config/: __init__.py  config_wizard.py
src/core/: __init__.py  browser_controller.py  login.py  main.py  stats.py  submit.py
src/extractors/: gmail_extractor.py  ocr_extractor.py
src/utils/: __init__.py  animations.py  bootstrap.py  browser_detection.py  browser_session.py  console.py  enhanced_progress.py  env_utils.py  gmail_cache.py  localization.py  logger.py  playwright_helpers.py  playwright_install.py  session.py  simple_progress.py  testing.py  totp.py  validation.py
tests/: conftest.py  test_agent_cli.py  test_ai_handoff.py  test_browser_controller.py  test_browser_session.py  test_cli.py  test_config_wizard.py  test_mock_portal_integration.py  test_parser_matcher.py  test_paths.py  test_reporter.py  test_session_manager.py  test_single_submission.py  test_source_clients.py  test_state_reader.py  test_submit_helpers.py
