[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "always-attend"
version = "0.1.0"
description = "Automation assistant for attendance management."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "playwright>=1.54.0",
  "pyotp==2.9.0",
  "aiohttp>=3.8.0",
  "rich>=13.0.0",
]
