[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "always-attend"
version = "0.1.0"
description = "Automation assistant for attendance management."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "bunizao" }
]
keywords = ["attendance", "automation", "playwright", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "playwright>=1.54.0",
  "pyotp==2.9.0",
  "aiohttp>=3.8.0",
  "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/bunizao/always-attend"
Repository = "https://github.com/bunizao/always-attend"
Issues = "https://github.com/bunizao/always-attend/issues"

[project.scripts]
attend = "always_attend.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "always_attend",
  "always_attend.*",
  "core",
  "core.*",
  "config",
  "config.*",
  "utils",
  "utils.*",
]
