[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "always-attend"
version = "0.1.2"
description = "Agent-first CLI for inspecting, matching, and submitting attendance codes."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "bunizao" }
]
keywords = ["attendance", "automation", "agent", "playwright", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "playwright>=1.54.0",
  "pyotp==2.9.0",
  "aiohttp>=3.8.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/bunizao/always-attend"
Repository = "https://github.com/bunizao/always-attend"
Issues = "https://github.com/bunizao/always-attend/issues"

[project.scripts]
attend = "always_attend.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
always_attend = ["skills/SKILL.md", "skills/BOOTSTRAP.md"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "always_attend",
  "always_attend.*",
  "core",
  "core.*",
  "config",
  "config.*",
  "utils",
  "utils.*",
]
